// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={300}
      createdAt={0}
      description="Udemy javascript courses"
      id="111"
      key="111"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={345600000}
      description="Udemy drawing courses"
      id="222"
      key="222"
      note=""
    />
    <ExpenseListItem
      amount={1000}
      createdAt={-864000000}
      description="Games"
      id="333"
      key="333"
      note=""
    />
  </div>
</div>
`;
